--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*.pyc
 
 # C extensions
 *.so
@@ -22,6 +21,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+*/*.pyc
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
